Fix style bug on sidebar (hide default scrollbar)

--- a/src/app/styles/components/team/_team-sidebar.scss
+++ b/src/app/styles/components/team/_team-sidebar.scss
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100%;
   padding: 15px 25px 60px 25px;
-  overflow-y: scroll;
+  overflow-y: auto;
 
   background-color: hsl(204, 15%, 55%);
   color: darken(#fff, 0%);
